# - bring in theme (copy_to_bin)
# - copy over source (copy_to_bin)
# - reference package.json and other workspace for deps/targets
# - set up ibazel 
load("@build_bazel_rules_nodejs//:index.bzl", "copy_to_bin")
load("@npm//hexo:index.bzl", "hexo")
load("@npm//browser-sync:index.bzl", "browser_sync")
package(default_visibility=["//visibility:public"])

# set up alias from shared tsconfig
alias(
  name = "tsconfig.json",
  actual = "@dpu_dewalt_toolbag//:tsconfig.json"
)

filegroup(
  name = "site_files",
  srcs = glob([
    "source/**",
    "scaffolds/*",
    "_config.yaml",
    "package.json"
  ])
)

deps = [
  "@npm//:node_modules",
  # hexo can't find the plugin because it can't crawl node_modules dir and find 
  # it.  using local yarn dependencies via `file:` to get around that
  # non-node deps that we want to retrigger builds
  "//themes/pipes",
  "//:_config.yaml",
  "//:site_files"
]

hexo(
  name = "generate",
  data = deps,
  templated_args = ["generate", "--force"]
)

browser_sync(
  name = "serve",
  # TODO: figure out how to use bazel make variables here to avoid hardcoding bazel-out path
  #       see: https://docs.bazel.build/versions/master/be/make-variables.html#predefined_label_variables
  templated_args = ["/Users/shimmerjs/kdk12.sh/bazel-out/darwin-fastbuild/bin/generate.sh.runfiles/kdk12_sh/public", "-w"]
)

